# embodied-behavior-protocol

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  interoperability_report.yml  standards_proposal.yml
.github/workflows/: ci.yml
adrs/: 0000-template.md  0001-json-schema-and-semantic-validation.md  0002-protocol-native-composition-ir.md  0003-capability-profile-and-adapter-binding.md  README.md
conformance/fixtures/: README.md  manifest.json
docs/: ARCHITECTURE_REVIEW.md  README.md  glossary.md  research-basis.md  training-data.md
docs/bindings/: README.md  transport-and-ecosystem-bindings.md
examples/: README.md  generic-mobile-manipulator.capability.json  pick-and-place.behavior.json
governance/: CHARTER.md  RFC_PROCESS.md
rfcs/: 0000-template.md
schemas/v0.1/: README.md  behavior-spec.schema.json  capability-profile.schema.json  context-snapshot.schema.json  episode-annotation.schema.json  invocation-feedback.schema.json  invocation-request.schema.json  invocation-result.schema.json  predicate-expression.schema.json  (+4 more)
scripts/: check_fixtures.py  create_training_data.py  generate_core_fixtures.py  run_conformance.py  validate_oebp.py
spec/: README.md
spec/v0.1/: SPEC.md  (+1 more)
tests/: test_adapters.py  test_binding_docs.py  test_cli.py  test_compiler.py  test_conformance.py  test_episodes.py  test_generation.py  test_runtime.py  test_training_data.py  test_validator.py
(+85 files in other folders)
