[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oebp"
version = "0.1.0"
description = "Reference SDK and deterministic validator for the Open Embodied Behavior Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "OEBP Contributors"}
]

[project.scripts]
oebp = "oebp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
